fix: implement chart overflow

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -6,6 +6,10 @@ input {
     @apply px-4 py-3 outline-none border-gray-300 border-2 rounded-lg;
 }
 
+hr {
+    @apply my-2 w-full;
+}
+
 .btn-main {
     @apply px-4 py-1.5 outline-none border-gray-300 border-2 rounded-lg cursor-pointer;
 }
@@ -22,8 +26,16 @@ input {
     @apply w-full py-10 px-6 shadow-md;
 }
 
+.chart-overflow {
+    @apply w-full overflow-x-auto;
+}
+
+.chart {
+    @apply min-w-[500px] h-full;
+}
+
 .chart-container {
-    @apply w-full max-h-[700px] px-2 py-4 select-none mx-auto;
+    @apply w-[60vw] min-[390px]:w-[80vw] h-[600px] py-4 select-none mx-auto;
 }
 
 .nav-bar {
@@ -47,5 +59,5 @@ input {
 }
 
 .record-card {
-    @apply py-3 px-5 border-2 border-gray-300 rounded-lg flex items-center justify-between select-none;
+    @apply py-3 px-5 border-2 border-gray-300 rounded-lg flex items-center select-none;
 }
